1.主页展示全部用ReceycleView 2.全部用同一个适配器 3.全部用一个网页视图